--- a/src/main/resources/view/SignUpAlert.fxml
+++ b/src/main/resources/view/SignUpAlert.fxml
@@ -2,17 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="170.0" spacing="20.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="61.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="43.0" text="OK" textAlignment="CENTER" />
-      <Label layoutX="70.0" layoutY="23.0" text="Success">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
+      <Label text="Success" />
+      <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="43.0" text="ok" />
    </children>
-</AnchorPane>
+</VBox>
