--- a/src/main/resources/view/SignUpAlert.fxml
+++ b/src/main/resources/view/SignUpAlert.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="170.0" spacing="20.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="170.0" spacing="20.0" stylesheets="@../css/AlertDesign.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.SignUpViewController">
    <children>
       <Label text="Success" />
-      <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="43.0" text="ok" />
+      <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonAction" prefHeight="23.0" prefWidth="43.0" text="ok" />
    </children>
 </VBox>
