--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/LoginDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/MainViewDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="220.0" layoutY="74.0" prefHeight="60.0" prefWidth="161.0" text="Welcome" textAlignment="CENTER" />
+      <VBox alignment="CENTER" layoutX="50.0" layoutY="65.0" prefHeight="235.0" prefWidth="501.0" spacing="20.0">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="86.0" prefWidth="293.0" text="WELCOME NIGGA" />
+            <Button fx:id="fuckYouButton" mnemonicParsing="false" onAction="#fuckYouButtonAction" text="FUCK YOU" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
