--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/MainViewDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="154.0" layoutY="134.0" prefHeight="86.0" prefWidth="293.0" text="WELCOME NIGGA" />
-      <Button fx:id="fuckYouButton" layoutX="263.0" layoutY="246.0" mnemonicParsing="false" onAction="#fuckYouButtonAction" text="Click me for free reward 😜😮😘" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="154.0" layoutY="134.0" prefHeight="86.0" prefWidth="293.0" text="WELCOME" />
+      <Button fx:id="clickMeButton" layoutX="263.0" layoutY="246.0" mnemonicParsing="false" onAction="#clickMeButtonAction" text="Click me" />
    </children>
 </AnchorPane>
