--- a/src/main/resources/view/LoginView.fxml
+++ b/src/main/resources/view/LoginView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/LoginDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.LoginViewController">
    <children>
-      <TextField fx:id="usernameTextField" layoutX="226.0" layoutY="104.0" />
+      <TextField fx:id="usernameTextField" layoutX="226.0" layoutY="104.0" onAction="#usernameTextFieldAction" />
       <PasswordField fx:id="passwordTextField" layoutX="226.0" layoutY="154.0" onAction="#passwordTextFieldAction" />
       <Button fx:id="signInButton" layoutX="226.0" layoutY="215.0" mnemonicParsing="false" onAction="#signInAction" text="Sign In" />
       <Button fx:id="signUpButton" layoutX="317.0" layoutY="215.0" mnemonicParsing="false" onAction="#signUpAction" text="Sign Up" />
