--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/MainViewDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/TrollViewDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="154.0" layoutY="134.0" prefHeight="86.0" prefWidth="293.0" text="WELCOME" />
-      <Button fx:id="clickMeButton" layoutX="263.0" layoutY="246.0" mnemonicParsing="false" onAction="#clickMeButtonAction" text="Click me" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="110.0" layoutY="25.0" prefHeight="86.0" prefWidth="380.0" text="THIS IS THE MAIN VIEW" />
    </children>
 </AnchorPane>
