--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/TrollViewDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="110.0" layoutY="25.0" prefHeight="86.0" prefWidth="380.0" text="THIS IS THE MAIN VIEW" />
+      <Button fx:id="uploadButton" layoutX="274.0" layoutY="188.0" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload" />
+      <Label layoutX="162.0" layoutY="95.0" prefHeight="75.0" prefWidth="294.0" text="Upload file to Archive" />
    </children>
 </AnchorPane>
