--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/MainDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <Button fx:id="uploadButton" layoutX="274.0" layoutY="188.0" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload" />
-      <Label layoutX="162.0" layoutY="95.0" prefHeight="75.0" prefWidth="294.0" text="Upload file to Archive" />
+      <VBox alignment="CENTER" layoutX="14.0" layoutY="11.0" prefHeight="375.0" prefWidth="572.0" styleClass="vBox1">
+         <children>
+            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
+               <tooltip>
+                  <Tooltip text="Upload File" />
+               </tooltip>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
