Refactor MainView layout by renaming VBox style class to 'Box' and enhancing structure with additional HBox and Pane elements; add ScrollBar for improved navigation

--- a/src/main/resources/css/MainDesign.css
+++ b/src/main/resources/css/MainDesign.css
@@ -3,7 +3,7 @@
     -fx-font-family: Lexend, JetBrains Mono;
 }
 
-.vBox1 {
+.Box {
     -fx-background-color: #ffffff;
     -fx-border-color: #020202;
     -fx-border-radius: 5;
