--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,20 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/MainDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../css/MainDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <VBox alignment="CENTER" layoutX="14.0" layoutY="11.0" prefHeight="375.0" prefWidth="572.0" styleClass="vBox1">
+      <VBox alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="370.0" prefWidth="164.0" spacing="5.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
-               <tooltip>
-                  <Tooltip text="Upload File" />
-               </tooltip>
-            </Button>
+            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="151.0" spacing="15.0">
+               <children>
+                  <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
+                     <tooltip>
+                        <Tooltip text="Upload File" />
+                     </tooltip>
+                  </Button>
+                  <Button mnemonicParsing="false" text="Upload">
+                     <tooltip>
+                        <Tooltip text="Upload File" />
+                     </tooltip>
+                  </Button>
+               </children>
+            </HBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></VBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></VBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></VBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></VBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></VBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></VBox>
+            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" />
+               </VBox.margin></VBox>
          </children>
       </VBox>
+      <AnchorPane layoutX="177.0" layoutY="12.0" prefHeight="370.0" prefWidth="413.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <children>
+            <Pane layoutX="14.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.topAnchor="10.0" />
+            <Pane layoutX="219.0" layoutY="198.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="35.0" />
+            <Pane layoutX="14.0" layoutY="198.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.bottomAnchor="10.0" />
+            <Pane layoutX="219.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="10.0" />
+            <ScrollBar layoutX="395.0" layoutY="15.0" orientation="VERTICAL" prefHeight="360.0" prefWidth="16.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="393.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="10.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
