--- a/src/main/resources/css/MainDesign.css
+++ b/src/main/resources/css/MainDesign.css
@@ -37,3 +37,36 @@
     -fx-focus-color: transparent;
     -fx-faint-focus-color: transparent;
 }
+
+
+/* List View Design */
+.listView {
+    -fx-background-color: #ffffff;
+    -fx-border-color: #020202;
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
+    /* -fx-padding: 5px; */
+}
+
+/* Hover state */
+.listView:hover {
+    -fx-background-color: #e2e2e2;
+    -fx-text-fill: #000000;
+}
+
+/* Pressed state */
+.listView:pressed {
+    -fx-background-color: #d0d0d0;
+    -fx-text-fill: #0033ff;
+}
+
+/* Focused state */
+.listView:focused {
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+}
+
+.list-cell:selected {
+    -fx-background-color: #e2e2e2;
+    -fx-text-fill: #000000;
+}
