--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.Tooltip?>
@@ -11,52 +10,21 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../css/MainDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <VBox alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="370.0" prefWidth="164.0" spacing="5.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="10.0">
+      <HBox alignment="CENTER" layoutX="23.0" layoutY="10.0" prefHeight="60.0" prefWidth="151.0" spacing="15.0" styleClass="Box" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="10.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="151.0" spacing="15.0">
-               <children>
-                  <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
-                     <tooltip>
-                        <Tooltip text="Upload File" />
-                     </tooltip>
-                  </Button>
-                  <Button mnemonicParsing="false" text="Upload">
-                     <tooltip>
-                        <Tooltip text="Upload File" />
-                     </tooltip>
-                  </Button>
-               </children>
-            </HBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></VBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></VBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></VBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></VBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></VBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></VBox>
-            <VBox prefHeight="60.0" prefWidth="151.0" styleClass="button">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" />
-               </VBox.margin></VBox>
+            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
+               <tooltip>
+                  <Tooltip text="Upload File" />
+               </tooltip>
+            </Button>
+            <Button mnemonicParsing="false" text="Upload">
+               <tooltip>
+                  <Tooltip text="Upload File" />
+               </tooltip>
+            </Button>
          </children>
-      </VBox>
+      </HBox>
+      <VBox fx:id="fileContainer" alignment="TOP_CENTER" layoutX="14.0" layoutY="72.0" prefHeight="318.0" prefWidth="164.0" spacing="5.0" styleClass="fileContainer" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="72.0" />
       <AnchorPane layoutX="177.0" layoutY="12.0" prefHeight="370.0" prefWidth="413.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
             <Pane layoutX="14.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.topAnchor="10.0" />
