--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,37 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../css/MainDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <HBox alignment="CENTER" layoutX="23.0" layoutY="10.0" prefHeight="60.0" prefWidth="151.0" spacing="15.0" styleClass="Box" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="10.0">
+      <ScrollPane hbarPolicy="NEVER" layoutX="15.0" layoutY="83.0" prefHeight="117.0" prefWidth="141.0" styleClass="Default" vbarPolicy="NEVER" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="72.0">
+         <content>
+            <VBox fx:id="fileContainer" alignment="TOP_CENTER" prefHeight="321.0" prefWidth="152.0" spacing="5.0" styleClass="fileContainer">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></VBox>
+         </content>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </ScrollPane>
+      <HBox alignment="CENTER" layoutX="23.0" layoutY="10.0" prefHeight="60.0" prefWidth="151.0" spacing="15.0" styleClass="Default" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="10.0">
          <children>
             <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
                <tooltip>
                   <Tooltip text="Upload File" />
                </tooltip>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </Button>
-            <Button mnemonicParsing="false" text="Upload">
+            <Button mnemonicParsing="false" text="Delete">
                <tooltip>
-                  <Tooltip text="Upload File" />
+                  <Tooltip text="Delete File" />
                </tooltip>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </Button>
          </children>
       </HBox>
-      <VBox fx:id="fileContainer" alignment="TOP_CENTER" layoutX="14.0" layoutY="72.0" prefHeight="318.0" prefWidth="164.0" spacing="5.0" styleClass="fileContainer" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="72.0" />
-      <AnchorPane layoutX="177.0" layoutY="12.0" prefHeight="370.0" prefWidth="413.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <AnchorPane layoutX="177.0" layoutY="12.0" prefHeight="370.0" prefWidth="413.0" styleClass="Default" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Pane layoutX="14.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.topAnchor="10.0" />
-            <Pane layoutX="219.0" layoutY="198.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="35.0" />
-            <Pane layoutX="14.0" layoutY="198.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.bottomAnchor="10.0" />
-            <Pane layoutX="219.0" prefHeight="172.0" prefWidth="176.0" styleClass="button" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="10.0" />
-            <ScrollBar layoutX="395.0" layoutY="15.0" orientation="VERTICAL" prefHeight="360.0" prefWidth="16.0" styleClass="Box" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="393.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="10.0" />
+            <ScrollPane layoutX="14.0" layoutY="14.0" prefHeight="307.0" prefWidth="390.0" styleClass="Default" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
          </children>
       </AnchorPane>
    </children>
