--- a/src/main/resources/com/r4ppz/view/MainView.fxml
+++ b/src/main/resources/com/r4ppz/view/MainView.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../css/MainDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewController">
    <children>
-      <ScrollPane hbarPolicy="NEVER" layoutX="15.0" layoutY="83.0" prefHeight="117.0" prefWidth="141.0" styleClass="Default" vbarPolicy="NEVER" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="53.0">
+      <ScrollPane hbarPolicy="NEVER" layoutX="15.0" layoutY="83.0" prefHeight="117.0" prefWidth="141.0" styleClass="Default" vbarPolicy="NEVER" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="28.0">
          <content>
-            <VBox fx:id="fileContainer" alignment="TOP_CENTER" prefHeight="321.0" prefWidth="152.0" spacing="5.0" styleClass="fileContainer">
+            <VBox fx:id="fileContainer" alignment="TOP_CENTER" prefHeight="349.0" prefWidth="152.0" spacing="5.0" styleClass="FileContainer">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></VBox>
@@ -21,25 +21,11 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </ScrollPane>
-      <HBox alignment="CENTER" layoutX="23.0" layoutY="10.0" prefHeight="45.0" prefWidth="164.0" spacing="15.0" styleClass="Default" AnchorPane.bottomAnchor="345.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="426.0" AnchorPane.topAnchor="10.0">
-         <children>
-            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction" text="Upload">
-               <tooltip>
-                  <Tooltip text="Upload File" />
-               </tooltip>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </Button>
-         </children>
-      </HBox>
-      <AnchorPane layoutX="177.0" layoutY="12.0" prefHeight="370.0" prefWidth="413.0" styleClass="Default" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="173.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-         <children>
-            <ScrollPane layoutX="14.0" layoutY="14.0" prefHeight="307.0" prefWidth="390.0" styleClass="Default" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-         </children>
-      </AnchorPane>
+      <Button fx:id="uploadButton" layoutX="14.0" layoutY="4.0" mnemonicParsing="false" onAction="#uploadButtonAction" prefHeight="21.0" prefWidth="63.0" styleClass="Button" text="Upload">
+         <tooltip>
+            <Tooltip text="Upload File" />
+         </tooltip>
+      </Button>
+      <Line endX="-193.0" endY="-20.0" layoutX="193.0" layoutY="49.0" startX="407.0" startY="-20.0" styleClass="Line" />
    </children>
 </AnchorPane>
