Add FinalDesign.css for improved styling; create MainViewV2.fxml for layout updates; adjust button position in MainView.fxml; clean up WindowTest class

--- a/src/main/resources/com/r4ppz/css/MainDesign.css
+++ b/src/main/resources/com/r4ppz/css/MainDesign.css
@@ -38,7 +38,7 @@
 
 
 /*? FILE BOX INDIVIDUAL BOX INSIDE OF THE FILE MANAGER VBOX */
-/*!  THIS IS DYNAMIC BTW SO DO NOT CHANGE THE NAME */
+/*!  THIS IS DYNAMIC BTW SO DON'T FUCKING CHANGE THE NAME */
 .file-box {
     /* -fx-text-fill: #000000;
     -fx-font-size: 15; */
