--- a/src/main/resources/com/r4ppz/css/FinalDesign.css
+++ b/src/main/resources/com/r4ppz/css/FinalDesign.css
@@ -11,13 +11,13 @@
 }
 
 .button:hover {
-    -fx-background-color: rgb(255, 255, 255);
+    -fx-background-color: rgb(225, 225, 225);
     -fx-text-fill: #000000;
 }
 
 .button:pressed {
-    -fx-background-color: rgb(241, 241, 241);
-    -fx-text-fill: #0033ff;
+    -fx-background-color: rgb(212, 212, 212);
+    -fx-text-fill: #ff001e;
 }
 
 .button:focused {
@@ -45,6 +45,7 @@
     -fx-border-radius: 5;
     -fx-border-width: 1px;
     -fx-padding: 10, 30, 10, 30;
+    -fx-font-size: 11;
 
     -fx-min-width: 150px;
     -fx-max-width: 150px;
@@ -56,16 +57,23 @@
 }
 
 .content-folder-button:hover {
-    -fx-background-color: rgb(255, 255, 255);
+    -fx-background-color: rgb(225, 225, 225);
     -fx-text-fill: #000000;
 }
 
 .content-folder-button:pressed {
-    -fx-background-color: rgb(241, 241, 241);
-    -fx-text-fill: #0033ff;
+    -fx-background-color: rgb(212, 212, 212);
+    -fx-text-fill: #ff001e;
 }
 
 .content-folder-button:focused {
     -fx-focus-color: transparent;
     -fx-faint-focus-color: transparent;
+}
+
+.file-name-tooltip {
+    -fx-background-color: rgb(255, 255, 255);
+    -fx-border-color: black;
+    -fx-border-radius: 5;
+    -fx-text-fill: black;
 }
