--- a/src/main/resources/org/r4ppz/view/LoginView.fxml
+++ b/src/main/resources/org/r4ppz/view/LoginView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/LoginDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.LoginViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/LoginDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.r4ppz.controller.LoginViewController">
    <children>
       <TextField fx:id="usernameTextField" layoutX="226.0" layoutY="104.0" onAction="#usernameTextFieldAction" />
       <PasswordField fx:id="passwordTextField" layoutX="226.0" layoutY="154.0" onAction="#passwordTextFieldAction" />
